# scrapinsta

./: LICENSE  README.md  comment.py  comment_bot.py  config.py  followers.py  following.py  nasa_followers.txt  nasa_following.txt  pyproject.toml  requirements.txt  scrapinsta.py  setup.py
scrapinsta/: __init__.py  scrapinsta.py
scrapinsta/domain/entities/: IScrapinsta.py
scrapinsta/domain/providers/: IWebdriver.py
scrapinsta/infra/entities/: Scrapinsta.py
scrapinsta/infra/entities/tests/: test_scrapinsta.py
scrapinsta/infra/providers/: Webdriver.py
scrapinsta/infra/providers/tests/: test_webdriver.py
scrapinsta/tests/: tests.py
stubs/: pytest.pyi  setuptools.pyi
stubs/selenium/selenium/common/: exceptions.pyi
stubs/selenium/selenium/webdriver/android/: webdriver.pyi
stubs/selenium/selenium/webdriver/blackberry/: webdriver.pyi
stubs/selenium/selenium/webdriver/chrome/: remote_connection.pyi  service.pyi
stubs/selenium/selenium/webdriver/common/: service.pyi
stubs/selenium/selenium/webdriver/edge/: service.pyi
stubs/selenium/selenium/webdriver/firefox/: extension_connection.pyi  firefox_binary.pyi  remote_connection.pyi  service.pyi
stubs/selenium/selenium/webdriver/ie/: service.pyi
stubs/selenium/selenium/webdriver/phantomjs/: service.pyi
stubs/selenium/selenium/webdriver/remote/: remote_connection.pyi  webdriver.pyi
stubs/selenium/selenium/webdriver/safari/: remote_connection.pyi  service.pyi  webdriver.pyi
stubs/selenium/selenium/webdriver/support/: wait.pyi
stubs/selenium/selenium/webdriver/webkitgtk/: service.pyi
(+2 files in other folders)
